Add bicubic example

--- a/examples/Rendering/reconstruct.ipynb
+++ b/examples/Rendering/reconstruct.ipynb
@@ -16,8 +16,8 @@
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 449\n",
-      "  IR Compile time: 142.309402 ms\n",
-      "  Compiler time: 1572.135986 ms\n",
+      "  IR Compile time: 222.624191 ms\n",
+      "  Compiler time: 1464.103882 ms\n",
       "\n"
      ]
     }
@@ -39,6 +39,28 @@
     "    oxf, oyf = 1.0-xf, 1.0-yf\n",
     "    return tex[xi, yi]*oxf*oyf + tex[xi+1, yi]*xf*oyf + tex[xi, yi+1]*oxf*yf + tex[xi+1, yi+1]*xf*yf\n",
     "\n",
+    "def CubicHermit(x):\n",
+    "    x2 = x * x\n",
+    "    x3 = x2 * x\n",
+    "    return [-0.5 * x3 + x2 - 0.5 * x, 1.5 * x3 - 2.5 * x2 + 1.0, -1.5 * x3 + 2.0 * x2 + 0.5 * x, 0.5 * x3 - 0.5 * x2]\n",
+    "\n",
+    "def Bicubic(tex, x, y):\n",
+    "    xi, yi = tf.floor(x), tf.floor(y)\n",
+    "    xf, yf = x-xi, y-yi\n",
+    "    xi, yi = tf.int(xi), tf.int(yi)\n",
+    "\n",
+    "    wx = CubicHermit(xf)\n",
+    "    wy = CubicHermit(yf)\n",
+    "\n",
+    "    valueY = 0.0\n",
+    "    for j in range(-1, 3):\n",
+    "        valueX = 0.0\n",
+    "        for i in range(-1, 3):\n",
+    "            valueX = valueX + tex[xi + i, yi + j] * wx[i + 1]\n",
+    "        valueY = valueY + valueX * wy[j + 1]\n",
+    "        \n",
+    "    return valueY\n",
+    "\n",
     "def Reconstruct():\n",
     "    tex = tf.input([RN, RN], tf.float32)\n",
     "    pos = tf.input([-1, 2], tf.float32)\n",
@@ -58,7 +80,7 @@
     "    i, j = tf.indices([512, 512])\n",
     "    x, y = tf.float(i*RN)/512.0, tf.float(j*RN)/512.0\n",
     "    x = float(RN-1) - x\n",
-    "    samp = Bilinear(new_tex, x, y)\n",
+    "    samp = Bicubic(new_tex, x, y)\n",
     "    render[i, j, 0] = samp\n",
     "    render[i, j, 1] = samp\n",
     "    render[i, j, 2] = samp\n",
