--- a/examples/Rendering/reconstruct.ipynb
+++ b/examples/Rendering/reconstruct.ipynb
@@ -11,13 +11,13 @@
      "text": [
       "TensorFrost module loaded in debug mode! Expect slow performance.\n",
       "Reconstruct:\n",
-      "  Kernel count: 5\n",
-      "  Intermediate buffers: 2\n",
+      "  Kernel count: 6\n",
+      "  Intermediate buffers: 4\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 449\n",
-      "  IR Compile time: 222.624191 ms\n",
-      "  Compiler time: 1464.103882 ms\n",
+      "  Lines of generated code: 801\n",
+      "  IR Compile time: 419.059296 ms\n",
+      "  Compiler time: 1431.311157 ms\n",
       "\n"
      ]
     }
@@ -70,7 +70,7 @@
     "    i, = vals.indices\n",
     "    x, y = pos[i, 0], pos[i, 1]\n",
     "\n",
-    "    samp = Bilinear(tex, x, y)\n",
+    "    samp = Bicubic(tex, x, y)\n",
     "    diff = samp-vals\n",
     "    loss = tf.sum(diff*diff)\n",
     "\n",
