Update version and examples

--- a/examples/Algorithms/indexing_test.ipynb
+++ b/examples/Algorithms/indexing_test.ipynb
@@ -15,9 +15,9 @@
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 492\n",
-      "  IR Compile time: 3.605000 ms\n",
-      "  Compiler time: 1444.354736 ms\n",
+      "  Lines of generated code: 537\n",
+      "  IR Compile time: 3.752700 ms\n",
+      "  Steps time: 1513.760132 ms\n",
       "\n",
       "(32, 32, 3)\n"
      ]
@@ -79,37 +79,6 @@
     "plt.imshow(resnp)\n",
     "plt.colorbar()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'TensorFrost' has no attribute 'program'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m     canvas[N\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m3\u001b[39m:N\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.0\u001b[39m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [canvas]\n\u001b[1;32m----> 7\u001b[0m t1 \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprogram\u001b[49m(test)\n\u001b[0;32m      9\u001b[0m res, \u001b[38;5;241m=\u001b[39m t1()\n\u001b[0;32m     10\u001b[0m resnp \u001b[38;5;241m=\u001b[39m res\u001b[38;5;241m.\u001b[39mnumpy\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'TensorFrost' has no attribute 'program'"
-     ]
-    }
-   ],
-   "source": [
-    "def test():\n",
-    "    canvas = tf.zeros([32], tf.float32)\n",
-    "    N, = canvas.shape\n",
-    "    canvas[N/3:N/2] = 1.0\n",
-    "    return [canvas]\n",
-    "\n",
-    "t1 = tf.program(test)\n",
-    "\n",
-    "res, = t1()\n",
-    "resnp = res.numpy\n",
-    "print(resnp.shape)"
    ]
   }
  ],
