Radix sort example

--- a/examples/Algorithms/scan.ipynb
+++ b/examples/Algorithms/scan.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "Scan:\n",
       "  Kernel count: 4\n",
       "  Intermediate buffers: 3\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 650\n",
-      "  IR Compile time: 7.290400 ms\n",
-      "  Steps time: 1535.190674 ms\n",
+      "  Lines of generated code: 491\n",
+      "  IR Compile time: 7.446600 ms\n",
+      "  Steps time: 1590.015747 ms\n",
       "\n"
      ]
     }
@@ -26,7 +27,7 @@
     "import TensorFrost as tf\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "tf.initialize(tf.cpu)\n",
+    "tf.initialize(tf.opengl)\n",
     "\n",
     "test_axis = 2\n",
     "\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
