--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "QRDecomposition:\n",
       "  Kernel count: 8\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 444\n",
-      "  IR Compile time: 4.008300 ms\n",
-      "  Compiler time: 1438.007568 ms\n",
+      "  Lines of generated code: 498\n",
+      "  IR Compile time: 6.238100 ms\n",
+      "  Steps time: 1643.541138 ms\n",
       "\n"
      ]
     }
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,20 +115,20 @@
      "text": [
       "QR decomposition is correct: True\n",
       "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 1.9229626863835638e-16\n",
-      "Error using TensorFrost: 1.4379632869159912e-07\n",
+      "Error: 1.528132866464668e-16\n",
+      "Error using TensorFrost: 1.6919056190406552e-07\n",
       "Q:\n",
-      " [[ 0.38164046  0.4589707  -0.21670018  0.6375303  -0.436225  ]\n",
-      " [ 0.10536594  0.48427615  0.83494586 -0.20836361 -0.11757868]\n",
-      " [ 0.6480063  -0.27790347  0.2384919   0.30108896  0.5960891 ]\n",
-      " [ 0.07976632  0.6735651  -0.39972037 -0.29991347  0.53872347]\n",
-      " [ 0.6457351  -0.15460339 -0.19812036 -0.60789555 -0.38773447]]\n",
+      " [[ 0.68789995 -0.24870868 -0.530556    0.34124145 -0.2588487 ]\n",
+      " [ 0.3551068  -0.05708764  0.14925066  0.16233231  0.9066488 ]\n",
+      " [ 0.17571889  0.7553028  -0.45680097 -0.4164859   0.12850218]\n",
+      " [ 0.24866302  0.5832398   0.5078411   0.53173953 -0.23947626]\n",
+      " [ 0.5549618  -0.15567257  0.47923386 -0.6332418  -0.19267489]]\n",
       "R:\n",
-      " [[ 1.5277998   1.5553625   0.9381008   1.3711534   1.3707838 ]\n",
-      " [ 0.          0.6546776   0.641195    0.10939406  0.32050806]\n",
-      " [ 0.          0.          0.64566505  0.08722901 -0.00254943]\n",
-      " [ 0.          0.          0.          0.08293349 -0.15995835]\n",
-      " [ 0.          0.          0.          0.          0.16902758]]\n"
+      " [[1.3609065  0.31754732 1.1668175  0.8770228  1.4464098 ]\n",
+      " [0.         0.73193365 0.39834985 0.8001413  0.34503525]\n",
+      " [0.         0.         0.6512088  0.0220322  0.40813744]\n",
+      " [0.         0.         0.         0.4145146  0.2229739 ]\n",
+      " [0.         0.         0.         0.         0.17106628]]\n"
      ]
     }
    ],
@@ -159,24 +160,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for TensorFrost QR decomposition: 5.670893907546997\n",
-      "Time for built-in NumPy QR decomposition: 4.237346887588501\n",
-      "Error: 0.0012285828\n",
-      "Error using TensorFrost: 0.0018776024\n"
+      "Time for TensorFrost QR decomposition: 0.372999906539917\n",
+      "Time for built-in NumPy QR decomposition: 0.17099928855895996\n",
+      "Error: 0.00021847112\n",
+      "Error using TensorFrost: 0.000245396\n"
      ]
     }
    ],
    "source": [
     "#performance test\n",
     "import time\n",
-    "A = np.random.rand(5000, 5000).astype(np.float32)\n",
+    "A = np.random.rand(1000, 1000).astype(np.float32)\n",
     "\n",
     "#naive NumPy QR decomposition\n",
     "#start = time.time()\n",
