--- a/examples/Algorithms/scan.ipynb
+++ b/examples/Algorithms/scan.ipynb
@@ -11,13 +11,13 @@
      "text": [
       "TensorFrost module loaded!\n",
       "Scan:\n",
-      "  Kernel count: 4\n",
-      "  Intermediate buffers: 3\n",
+      "  Kernel count: 5\n",
+      "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 491\n",
-      "  IR Compile time: 7.446600 ms\n",
-      "  Steps time: 1590.015747 ms\n",
+      "  Lines of generated code: 493\n",
+      "  IR Compile time: 5.439100 ms\n",
+      "  Steps time: 1511.394409 ms\n",
       "\n"
      ]
     }
@@ -29,13 +29,13 @@
     "\n",
     "tf.initialize(tf.opengl)\n",
     "\n",
-    "test_axis = 2\n",
+    "test_axis = 1\n",
     "\n",
     "def PrefixSum(A, axis = -1):\n",
     "    axis = len(A.shape) + axis if axis < 0 else axis\n",
     "    group_size = 128\n",
     "    grouped = tf.split_dim(A, group_size, axis)\n",
-    "    group_scan = tf.prefix_sum(tf.sum(grouped, axis = axis + 1))\n",
+    "    group_scan = tf.prefix_sum(tf.sum(grouped, axis = axis + 1), axis = axis)\n",
     "    ids = grouped.indices\n",
     "    gid, eid = ids[axis], ids[axis + 1]\n",
     "    ids = [ids[i] for i in range(len(ids)) if i != axis + 1]\n",
@@ -60,22 +60,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error:  0\n"
+      "Error:  0\n",
+      "Data:  [1 9 2 2 5 6 2 2 3 5 3 0 1 7 6 6 6 5 5 5 6 7 9 5 5]\n",
+      "Grouped Scan:  [  1  10  12  14  19  25  27  29  32  37  40  40  41  48  54  60  66  71\n",
+      "  76  81  87  94 103 108 113]\n",
+      "Grouped Scan:  [  1  10  12  14  19  25  27  29  32  37  40  40  41  48  54  60  66  71\n",
+      "  76  81  87  94 103 108 113 113 113 113 113 113 113 113]\n",
+      "Grouped Scan:  [  1  10  12  14  19  25  27  29  32  37  40  40  41  48  54  60  66  71\n",
+      "  76  81  87  94 103 108 113]\n",
+      "Grouped:  [1 9 2 2 5 6 2 2 3 5 3 0 1 7 6 6 6 5 5 5 6 7 9 5 5 0 0 0 0 0 0 0]\n",
+      "Grouped Scan1:  [ 29  60 108 113]\n",
+      "Full Scan:  [  1  10  12  14  19  25  27  29  32  37  40  40  41  48  54  60  66  71\n",
+      "  76  81  87  94 103 108 113]\n",
+      "Sums:  [29 31 48  5]\n",
+      "Diff:  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
      ]
     }
    ],
    "source": [
     "# Generate some random data to scan (ints between 0 and 10)\n",
-    "data = np.random.randint(0, 10, (32, 64, 128), dtype=np.int32)\n",
+    "data = np.random.randint(0, 10, (25, 1), dtype=np.int32)\n",
     "\n",
     "data_tf = tf.tensor(data)\n",
-    "scan_tf = scan_program(data_tf)\n",
+    "scan_tf, grouped, group_scan1, group_scan, sums = scan_program(data_tf)\n",
     "\n",
     "# do scan in numpy\n",
     "scan_np = np.cumsum(data, axis=test_axis)\n",
     "\n",
     "#print error\n",
-    "print(\"Error: \", np.max(np.abs(scan_tf.numpy - scan_np)))"
+    "print(\"Error: \", np.max(np.abs(scan_tf.numpy - scan_np)))\n",
+    "\n",
+    "print(\"Data: \", data.flatten())\n",
+    "print(\"Grouped Scan: \", scan_np.flatten())\n",
+    "print(\"Grouped Scan: \", group_scan.numpy.flatten())\n",
+    "print(\"Grouped Scan: \", scan_tf.numpy.flatten())\n",
+    "print(\"Grouped: \", grouped.numpy.flatten())\n",
+    "print(\"Grouped Scan1: \", group_scan1.numpy.flatten())\n",
+    "print(\"Full Scan: \", scan_tf.numpy.flatten())\n",
+    "print(\"Sums: \", sums.numpy.flatten())\n",
+    "print(\"Diff: \", np.abs(scan_tf.numpy - scan_np).flatten())"
    ]
   }
  ],
