--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -10,14 +10,14 @@
      "output_type": "stream",
      "text": [
       "TensorFrost module loaded!\n",
-      "QRDecomposition:\n",
-      "  Kernel count: 8\n",
-      "  Intermediate buffers: 0\n",
+      "InvertMatrix:\n",
+      "  Kernel count: 13\n",
+      "  Intermediate buffers: 1\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 498\n",
-      "  IR Compile time: 6.238100 ms\n",
-      "  Steps time: 1643.541138 ms\n",
+      "  Lines of generated code: 863\n",
+      "  IR Compile time: 9.969300 ms\n",
+      "  Steps time: 1692.547852 ms\n",
       "\n"
      ]
     }
@@ -26,34 +26,10 @@
     "import numpy as np\n",
     "import TensorFrost as tf\n",
     "\n",
-    "tf.initialize(tf.opengl)\n",
-    "\n",
-    "# Householder reflection\n",
-    "def householder_reflection(a):\n",
-    "    v = a.copy()\n",
-    "    v[0] = v[0] + np.copysign(np.linalg.norm(v), a[0])\n",
-    "    v = v / np.linalg.norm(v)\n",
-    "    return np.eye(len(a)) - 2 * np.outer(v, v)\n",
-    "\n",
-    "# QR decomposition using Householder reflections\n",
-    "def qr_decomposition(A):\n",
-    "    m, n = A.shape\n",
-    "    Q = np.eye(m)\n",
-    "    R = A.copy()\n",
-    "    for i in range(min(m, n)):\n",
-    "        H = np.eye(m)\n",
-    "        H[i:, i:] = householder_reflection(R[i:, i])\n",
-    "        Q = Q @ H\n",
-    "        R = H @ R\n",
-    "    return Q, R\n",
-    "\n",
+    "tf.initialize(tf.cpu)\n",
     "\n",
     "def modified_gram_schmidt(A):\n",
-    "    \"\"\"\n",
-    "    Implements the Modified Gram-Schmidt orthogonalization to get the QR decomposition of matrix A.\n",
-    "    A = QR\n",
-    "    \"\"\"\n",
-    "    A = A.astype(float)  # Ensure A is of float type\n",
+    "    A = A.astype(float)\n",
     "    m, n = A.shape\n",
     "    Q = np.zeros((m, n))\n",
     "    R = np.zeros((n, n))\n",
@@ -67,10 +43,7 @@
     "    Q[:, n-1] = A[:, n-1] / R[n-1, n-1]\n",
     "    return Q, R\n",
     "\n",
-    "#dynamic size QR decomposition\n",
-    "def QRDecomposition():\n",
-    "    A = tf.input([-1, -1], tf.float32)\n",
-    "\n",
+    "def qr_decomposition_tensorfrost(A):\n",
     "    m, n = A.shape\n",
     "    Q = tf.zeros([m, n])\n",
     "    R = tf.zeros([n, n])\n",
@@ -87,10 +60,36 @@
     "\n",
     "    R[n-1, n-1] = tf.norm(A[j, n-1])\n",
     "    Q[j, n-1] = A[j, n-1] / R[n-1, n-1]\n",
+    "    return Q, R\n",
     "\n",
-    "    return [Q, R]\n",
+    "def invert_triangular_tensorfrost(matrix, lower=True):\n",
+    "    n, n = matrix.shape\n",
+    "    inverted = tf.zeros([n, n])\n",
     "\n",
-    "qr = tf.compile(QRDecomposition)"
+    "    if not lower: #transpose the matrix to make it lower triangular\n",
+    "        matrix = matrix.T\n",
+    "    \n",
+    "    with tf.loop(n) as i:\n",
+    "        inverted[i, i] = 1.0 / matrix[i, i]\n",
+    "        p, k = tf.indices([i, i])\n",
+    "        t, = tf.indices([i])\n",
+    "        inverted[i, t] = -tf.sum(matrix[i, p] * inverted[p, k], axis=0) / matrix[i, i]\n",
+    "\n",
+    "    if not lower: #transpose the matrix back\n",
+    "        inverted = inverted.T\n",
+    "\n",
+    "    return inverted\n",
+    "\n",
+    "def InvertMatrix():\n",
+    "    A = tf.input([-1, -1], tf.float32)\n",
+    "\n",
+    "    Q, R = qr_decomposition_tensorfrost(A)\n",
+    "    R_inv = invert_triangular_tensorfrost(R, lower=False)\n",
+    "    A_inv = R_inv @ Q.T\n",
+    "\n",
+    "    return Q, R, R_inv, A_inv\n",
+    "\n",
+    "invert_matrix = tf.compile(InvertMatrix)"
    ]
   },
   {
@@ -115,20 +114,12 @@
      "text": [
       "QR decomposition is correct: True\n",
       "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 1.528132866464668e-16\n",
-      "Error using TensorFrost: 1.6919056190406552e-07\n",
-      "Q:\n",
-      " [[ 0.68789995 -0.24870868 -0.530556    0.34124145 -0.2588487 ]\n",
-      " [ 0.3551068  -0.05708764  0.14925066  0.16233231  0.9066488 ]\n",
-      " [ 0.17571889  0.7553028  -0.45680097 -0.4164859   0.12850218]\n",
-      " [ 0.24866302  0.5832398   0.5078411   0.53173953 -0.23947626]\n",
-      " [ 0.5549618  -0.15567257  0.47923386 -0.6332418  -0.19267489]]\n",
-      "R:\n",
-      " [[1.3609065  0.31754732 1.1668175  0.8770228  1.4464098 ]\n",
-      " [0.         0.73193365 0.39834985 0.8001413  0.34503525]\n",
-      " [0.         0.         0.6512088  0.0220322  0.40813744]\n",
-      " [0.         0.         0.         0.4145146  0.2229739 ]\n",
-      " [0.         0.         0.         0.         0.17106628]]\n"
+      "Error: 2.1015228059012304e-16\n",
+      "Error using TensorFrost: 1.0032900610140256e-07\n",
+      "R inversion is correct: True\n",
+      "Error: 1.0562193265287738e-06\n",
+      "Full inversion is correct: True\n",
+      "Error: 2.7237081917029467e-06\n"
      ]
     }
    ],
@@ -141,9 +132,11 @@
     "\n",
     "#compute QR decomposition using TensorFrost\n",
     "Atf = tf.tensor(A)\n",
-    "Qtf, Rtf = qr(Atf)\n",
+    "Qtf, Rtf, Rinvtf, Ainvtf = invert_matrix(Atf)\n",
     "Qnp = Qtf.numpy\n",
     "Rnp = Rtf.numpy\n",
+    "Rinvtf = Rinvtf.numpy\n",
+    "Ainvtf = Ainvtf.numpy\n",
     "\n",
     "#check if QR decomposition is correct\n",
     "print(\"QR decomposition is correct:\", np.allclose(A, np.dot(Q, R)))\n",
@@ -153,56 +146,36 @@
     "print(\"Error:\", np.linalg.norm(A - np.dot(Q, R)))\n",
     "print(\"Error using TensorFrost:\", np.linalg.norm(A - np.dot(Qnp, Rnp)))\n",
     "\n",
-    "#print Q and R\n",
-    "print(\"Q:\\n\", Qnp)\n",
-    "print(\"R:\\n\", Rnp)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time for TensorFrost QR decomposition: 0.372999906539917\n",
-      "Time for built-in NumPy QR decomposition: 0.17099928855895996\n",
-      "Error: 0.00021847112\n",
-      "Error using TensorFrost: 0.000245396\n"
-     ]
-    }
-   ],
-   "source": [
-    "#performance test\n",
-    "import time\n",
-    "A = np.random.rand(1000, 1000).astype(np.float32)\n",
+    "# #print Q and R\n",
+    "# print(\"Q:\\n\", Qnp)\n",
+    "# print(\"R:\\n\", Rnp)\n",
+    "# print(\"A:\\n\", A)\n",
     "\n",
-    "#naive NumPy QR decomposition\n",
-    "#start = time.time()\n",
-    "#Q, R = modified_gram_schmidt(A)\n",
-    "#print(\"Time for naive NumPy QR decomposition:\", time.time() - start)\n",
+    "#invert upper triangular matrix\n",
+    "Rinv = np.linalg.inv(R)\n",
     "\n",
-    "#TensorFrost QR decomposition\n",
-    "Atf = tf.tensor(A)\n",
-    "start = time.time()\n",
-    "Qtf, Rtf = qr(Atf)\n",
-    "Qtf = Qtf.numpy\n",
-    "print(\"Time for TensorFrost QR decomposition:\", time.time() - start)\n",
-    "Rtf = Rtf.numpy\n",
-    "#householder QR decomposition\n",
-    "#start = time.time()\n",
-    "#Q, R = qr_decomposition(A)\n",
-    "#print(\"Time for householder QR decomposition:\", time.time() - start)\n",
+    "#check if inversion is correct\n",
+    "print(\"R inversion is correct:\", np.allclose(Rinv, Rinvtf))\n",
     "\n",
-    "#built-in NumPy QR decomposition\n",
-    "start = time.time()\n",
-    "Q, R = np.linalg.qr(A)\n",
-    "print(\"Time for built-in NumPy QR decomposition:\", time.time() - start)\n",
+    "#check error\n",
+    "print(\"Error:\", np.linalg.norm(Rinv - Rinvtf))\n",
     "\n",
-    "print(\"Error:\", np.linalg.norm(A - np.dot(Q, R)))\n",
-    "print(\"Error using TensorFrost:\", np.linalg.norm(A - np.dot(Qtf, Rtf)))"
+    "# #print inverted matrix\n",
+    "# print(\"Inverted matrix:\\n\", Rinv)\n",
+    "# print(\"Inverted matrix using TensorFrost:\\n\", Rinv_tf)\n",
+    "\n",
+    "#invert matrix\n",
+    "Ainv = np.linalg.inv(A)\n",
+    "\n",
+    "#check if inversion is correct\n",
+    "print(\"Full inversion is correct:\", np.allclose(Ainv, Ainvtf))\n",
+    "\n",
+    "#check error\n",
+    "print(\"Error:\", np.linalg.norm(Ainv - Ainvtf))\n",
+    "\n",
+    "# #print inverted matrix\n",
+    "# print(\"Inverted matrix:\\n\", Ainv)\n",
+    "# print(\"Inverted matrix using TensorFrost:\\n\", Ainv_tf)\n"
    ]
   }
  ],
