Some bugfixes and better examples

--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -16,9 +16,20 @@
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 863\n",
-      "  IR Compile time: 13.153700 ms\n",
-      "  Steps time: 2198.112549 ms\n",
+      "  IR Compile time: 13.704000 ms\n",
+      "  Steps time: 1880.847900 ms\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Error in compilation pass FinalizeMemoryIndexing: Shapes are potentially not compatible for nodes:  and clamp at index 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 95\u001b[0m\n\u001b[0;32m     92\u001b[0m     Q, R \u001b[38;5;241m=\u001b[39m qr_decomposition_batched_tensorfrost(A)\n\u001b[0;32m     93\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Q, R\n\u001b[1;32m---> 95\u001b[0m qr_decomposition_batched \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mQRDecompositionBatched\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Error in compilation pass FinalizeMemoryIndexing: Shapes are potentially not compatible for nodes:  and clamp at index 0"
      ]
     }
    ],
@@ -89,7 +100,35 @@
     "\n",
     "    return Q, R, R_inv, A_inv\n",
     "\n",
-    "invert_matrix = tf.compile(InvertMatrix)"
+    "invert_matrix = tf.compile(InvertMatrix)\n",
+    "\n",
+    "\n",
+    "def qr_decomposition_batched_tensorfrost(A):\n",
+    "    b, m, n = A.shape\n",
+    "    Q = tf.zeros([b, m, n])\n",
+    "    R = tf.zeros([b, n, n])\n",
+    "    bj, j = tf.indices([b, m])\n",
+    "    bi, = tf.indices([b])\n",
+    "    with tf.loop(n-1) as i:\n",
+    "        R[bi, i, i] = tf.norm(A[bj, j, i])\n",
+    "        Q[bj, j, i] = A[bj, j, i] / R[bj, i, i]\n",
+    "\n",
+    "        bpk, p, k = tf.index_grid([0, 0, i + 1], [b, m, n])\n",
+    "        bt, t, = tf.index_grid([0, i+1], [b, n])\n",
+    "        R[bt, i, t] = tf.sum(Q[bpk, p, i] * A[bpk, p, k], axis=-2)\n",
+    "        A[bpk, p, k] -= Q[bpk, p, i] * R[bpk, i, k]\n",
+    "\n",
+    "    R[bi, n-1, n-1] = tf.norm(A[bj, j, n-1])\n",
+    "    Q[bj, j, n-1] = A[bj, j, n-1] / R[bj, n-1, n-1]\n",
+    "    return Q, R\n",
+    "\n",
+    "def QRDecompositionBatched():\n",
+    "    A = tf.input([-1, -1, -1], tf.float32)\n",
+    "\n",
+    "    Q, R = qr_decomposition_batched_tensorfrost(A)\n",
+    "    return Q, R\n",
+    "\n",
+    "qr_decomposition_batched = tf.compile(QRDecompositionBatched)"
    ]
   },
   {
