Reverse tensor indexing in compiler (part 1)

--- a/examples/Simulation/wave_simulation.ipynb
+++ b/examples/Simulation/wave_simulation.ipynb
@@ -15,9 +15,9 @@
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 439\n",
-      "  IR Compile time: 2.302300 ms\n",
-      "  Compiler time: 4076.615234 ms\n",
+      "  Lines of generated code: 483\n",
+      "  IR Compile time: 3.504200 ms\n",
+      "  Steps time: 1618.466064 ms\n",
       "\n"
      ]
     }
@@ -162,28 +162,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iterations per second: 1162.7847146754198\n",
-      "Iterations per second: 12499.788407092832\n",
-      "Iterations per second: 14286.749778595273\n",
-      "Iterations per second: 12500.160934612863\n",
-      "Iterations per second: 11110.739072847682\n",
-      "Iterations per second: 14286.263156102046\n",
-      "Iterations per second: 11111.033404858406\n",
-      "Iterations per second: 7692.441999082989\n",
-      "Iterations per second: 19995.728451563693\n",
-      "Iterations per second: 7987.324801950031\n",
-      "Iterations per second: 7693.711937779734\n",
-      "Iterations per second: 24998.83180355227\n",
+      "Iterations per second: 1307.2313263976762\n",
+      "Iterations per second: 14287.723123041287\n",
+      "Iterations per second: 10525.493738864212\n",
+      "Iterations per second: 10000.486397558476\n",
+      "Iterations per second: 11763.908677848207\n",
+      "Iterations per second: 9999.771123402632\n",
       "Iterations per second: 14285.290010558223\n",
-      "Iterations per second: 16666.55010728761\n",
-      "Iterations per second: 33341.049284578694\n"
+      "Iterations per second: 12500.533484338212\n",
+      "Iterations per second: 10526.55038273309\n",
+      "Iterations per second: 11764.898600319766\n",
+      "Iterations per second: 11110.444756430294\n",
+      "Iterations per second: 15385.166165358374\n",
+      "Iterations per second: 12500.160934612863\n",
+      "Iterations per second: 15385.166165358374\n",
+      "Iterations per second: 10526.286201877227\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_94420\\2846262413.py:34: RuntimeWarning: overflow encountered in multiply\n",
+      "  frame = np.clip(np.abs(3.0 * frame * 255), 0, 255).astype(np.uint8)\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_94420\\2846262413.py:34: RuntimeWarning: invalid value encountered in cast\n",
+      "  frame = np.clip(np.abs(3.0 * frame * 255), 0, 255).astype(np.uint8)\n"
      ]
     }
    ],
