--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -9,27 +9,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
-      "InvertMatrix:\n",
-      "  Kernel count: 13\n",
-      "  Intermediate buffers: 1\n",
-      "  Host readbacks: 0\n",
-      "  Host writes: 0\n",
-      "  Lines of generated code: 863\n",
-      "  IR Compile time: 13.704000 ms\n",
-      "  Steps time: 1880.847900 ms\n",
-      "\n"
+      "TensorFrost module loaded!\n"
      ]
     },
     {
      "ename": "RuntimeError",
-     "evalue": "Error in compilation pass FinalizeMemoryIndexing: Shapes are potentially not compatible for nodes:  and clamp at index 0",
+     "evalue": "Inner dimensions of the matrices must match",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 95\u001b[0m\n\u001b[0;32m     92\u001b[0m     Q, R \u001b[38;5;241m=\u001b[39m qr_decomposition_batched_tensorfrost(A)\n\u001b[0;32m     93\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Q, R\n\u001b[1;32m---> 95\u001b[0m qr_decomposition_batched \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mQRDecompositionBatched\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Error in compilation pass FinalizeMemoryIndexing: Shapes are potentially not compatible for nodes:  and clamp at index 0"
+      "Cell \u001b[1;32mIn[1], line 67\u001b[0m\n\u001b[0;32m     63\u001b[0m     A_inv \u001b[38;5;241m=\u001b[39m R_inv \u001b[38;5;241m@\u001b[39m Q\u001b[38;5;241m.\u001b[39mT\n\u001b[0;32m     65\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Q, R, R_inv, A_inv\n\u001b[1;32m---> 67\u001b[0m invert_matrix \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mInvertMatrix\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[1], line 63\u001b[0m, in \u001b[0;36mInvertMatrix\u001b[1;34m()\u001b[0m\n\u001b[0;32m     61\u001b[0m Q, R \u001b[38;5;241m=\u001b[39m qr_decomposition_tensorfrost(A)\n\u001b[0;32m     62\u001b[0m R_inv \u001b[38;5;241m=\u001b[39m invert_triangular_tensorfrost(R, lower\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m---> 63\u001b[0m A_inv \u001b[38;5;241m=\u001b[39m \u001b[43mR_inv\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m@\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m\n\u001b[0;32m     65\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m Q, R, R_inv, A_inv\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Inner dimensions of the matrices must match"
      ]
     }
    ],
@@ -100,35 +92,7 @@
     "\n",
     "    return Q, R, R_inv, A_inv\n",
     "\n",
-    "invert_matrix = tf.compile(InvertMatrix)\n",
-    "\n",
-    "\n",
-    "def qr_decomposition_batched_tensorfrost(A):\n",
-    "    b, m, n = A.shape\n",
-    "    Q = tf.zeros([b, m, n])\n",
-    "    R = tf.zeros([b, n, n])\n",
-    "    bj, j = tf.indices([b, m])\n",
-    "    bi, = tf.indices([b])\n",
-    "    with tf.loop(n-1) as i:\n",
-    "        R[bi, i, i] = tf.norm(A[bj, j, i])\n",
-    "        Q[bj, j, i] = A[bj, j, i] / R[bj, i, i]\n",
-    "\n",
-    "        bpk, p, k = tf.index_grid([0, 0, i + 1], [b, m, n])\n",
-    "        bt, t, = tf.index_grid([0, i+1], [b, n])\n",
-    "        R[bt, i, t] = tf.sum(Q[bpk, p, i] * A[bpk, p, k], axis=-2)\n",
-    "        A[bpk, p, k] -= Q[bpk, p, i] * R[bpk, i, k]\n",
-    "\n",
-    "    R[bi, n-1, n-1] = tf.norm(A[bj, j, n-1])\n",
-    "    Q[bj, j, n-1] = A[bj, j, n-1] / R[bj, n-1, n-1]\n",
-    "    return Q, R\n",
-    "\n",
-    "def QRDecompositionBatched():\n",
-    "    A = tf.input([-1, -1, -1], tf.float32)\n",
-    "\n",
-    "    Q, R = qr_decomposition_batched_tensorfrost(A)\n",
-    "    return Q, R\n",
-    "\n",
-    "qr_decomposition_batched = tf.compile(QRDecompositionBatched)"
+    "invert_matrix = tf.compile(InvertMatrix)"
    ]
   },
   {
@@ -152,13 +116,13 @@
      "output_type": "stream",
      "text": [
       "QR decomposition is correct: True\n",
-      "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 2.334863047125274e-16\n",
-      "Error using TensorFrost: 1.321354610000808e-07\n",
-      "R inversion is correct: True\n",
-      "Error: 2.646375849369099e-06\n",
+      "QR decomposition using TensorFrost is correct: False\n",
+      "Error: 2.0393332747002487e-16\n",
+      "Error using TensorFrost: 2.6998837853118713\n",
+      "R inversion is correct: False\n",
+      "Error: 10.410296158443042\n",
       "Full inversion is correct: True\n",
-      "Error: 1.6329057644590567e-05\n"
+      "Error: 3.6754300190161937e-06\n"
      ]
     }
    ],
