--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -9,19 +9,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Inner dimensions of the matrices must match",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 67\u001b[0m\n\u001b[0;32m     63\u001b[0m     A_inv \u001b[38;5;241m=\u001b[39m R_inv \u001b[38;5;241m@\u001b[39m Q\u001b[38;5;241m.\u001b[39mT\n\u001b[0;32m     65\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Q, R, R_inv, A_inv\n\u001b[1;32m---> 67\u001b[0m invert_matrix \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mInvertMatrix\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[1], line 63\u001b[0m, in \u001b[0;36mInvertMatrix\u001b[1;34m()\u001b[0m\n\u001b[0;32m     61\u001b[0m Q, R \u001b[38;5;241m=\u001b[39m qr_decomposition_tensorfrost(A)\n\u001b[0;32m     62\u001b[0m R_inv \u001b[38;5;241m=\u001b[39m invert_triangular_tensorfrost(R, lower\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m---> 63\u001b[0m A_inv \u001b[38;5;241m=\u001b[39m \u001b[43mR_inv\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m@\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m\n\u001b[0;32m     65\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m Q, R, R_inv, A_inv\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Inner dimensions of the matrices must match"
+      "TensorFrost module loaded!\n",
+      "InvertMatrix:\n",
+      "  Kernel count: 13\n",
+      "  Intermediate buffers: 1\n",
+      "  Host readbacks: 0\n",
+      "  Host writes: 0\n",
+      "  Lines of generated code: 864\n",
+      "  IR Compile time: 12.467400 ms\n",
+      "  Steps time: 1902.861206 ms\n",
+      "\n"
      ]
     }
    ],
@@ -116,13 +113,13 @@
      "output_type": "stream",
      "text": [
       "QR decomposition is correct: True\n",
-      "QR decomposition using TensorFrost is correct: False\n",
-      "Error: 2.0393332747002487e-16\n",
-      "Error using TensorFrost: 2.6998837853118713\n",
-      "R inversion is correct: False\n",
-      "Error: 10.410296158443042\n",
+      "QR decomposition using TensorFrost is correct: True\n",
+      "Error: 2.273584105765514e-16\n",
+      "Error using TensorFrost: 1.5935119022229698e-07\n",
+      "R inversion is correct: True\n",
+      "Error: 8.026777637875303e-07\n",
       "Full inversion is correct: True\n",
-      "Error: 3.6754300190161937e-06\n"
+      "Error: 2.0344069471974373e-06\n"
      ]
     }
    ],
