Update some namings

--- a/examples/Rendering/neural_embed.ipynb
+++ b/examples/Rendering/neural_embed.ipynb
@@ -15,18 +15,18 @@
       "  Intermediate buffers: 11\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 561\n",
-      "  IR Compile time: 35.029400 ms\n",
-      "  Steps time: 1862.297607 ms\n",
+      "  Lines of generated code: 564\n",
+      "  IR Compile time: 38.026901 ms\n",
+      "  Steps time: 1902.769287 ms\n",
       "\n",
       "RenderImage:\n",
       "  Kernel count: 2\n",
       "  Intermediate buffers: 1\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 483\n",
-      "  IR Compile time: 7.594300 ms\n",
-      "  Steps time: 1529.100220 ms\n",
+      "  Lines of generated code: 484\n",
+      "  IR Compile time: 8.454400 ms\n",
+      "  Steps time: 1520.788086 ms\n",
       "\n"
      ]
     }
@@ -41,7 +41,7 @@
     "\n",
     "ImageW = 1000\n",
     "ImageH = 1000\n",
-    "RN = 64\n",
+    "RN = 32\n",
     "\n",
     "def sample(tex, i, j, k):\n",
     "    return tex[i, j, k]\n",
@@ -126,7 +126,7 @@
     "    learning_rate = info[0]\n",
     "\n",
     "    model = TextureEmbedder()\n",
-    "    opt = tf.optimizers.adam(model, learning_rate)\n",
+    "    opt = tf.optimizers.adam(model, learning_rate = learning_rate)\n",
     "    opt.initialize_input()\n",
     "\n",
     "    loss = opt.step(pos, val)\n",
@@ -227,22 +227,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_41316\\984542441.py:43: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-      "  tf.imgui_text(\"Loss: %.5f\" % loss_val)\n"
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10996\\2381237510.py:43: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  tf.imgui.text(\"Loss: %.5f\" % loss_val)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final loss: 0.00045\n"
+      "Final loss: 0.00131\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_41316\\984542441.py:53: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10996\\2381237510.py:53: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  print(\"Final loss: %.5f\" % loss_val)\n"
      ]
     }
@@ -250,7 +250,7 @@
    "source": [
     "import time\n",
     "\n",
-    "tf.show_window(ImageW, ImageH, \"reconstruction\")\n",
+    "tf.window.show(ImageW, ImageH, \"reconstruction\")\n",
     "\n",
     "prev_time = time.time()\n",
     "smooth_delta_time = 0.0\n",
@@ -266,7 +266,7 @@
     "freeze_weights = False\n",
     "freeze_tex = False\n",
     "\n",
-    "while not tf.window_should_close():\n",
+    "while not tf.window.should_close():\n",
     "    cur_time = time.time()\n",
     "\n",
     "    delta_time = cur_time - prev_time\n",
@@ -286,17 +286,17 @@
     "\n",
     "    normalize = False\n",
     "\n",
-    "    tf.render_frame(render(model))\n",
-    "    tf.imgui_text(\"Frame time: %.3f ms\" % (1000.0 * smooth_delta_time))\n",
-    "    tf.imgui_text(\"FPS: %.1f\" % (1.0 / (smooth_delta_time + 1e-5)))\n",
-    "    do_optimization = tf.imgui_checkbox(\"Optimize\", do_optimization)\n",
-    "    tf.imgui_text(\"Loss: %.5f\" % loss_val)\n",
-    "    lr = tf.imgui_slider(\"Learning rate\", lr, 0.0, 0.1)\n",
-    "    iters_per_frame = tf.imgui_slider(\"Iterations per frame\", iters_per_frame, 1, 100)\n",
-    "    batch_size = tf.imgui_slider(\"Batch size\", batch_size, 64, 10000)\n",
-    "    freeze_weights = tf.imgui_checkbox(\"Freeze weights\", freeze_weights)\n",
-    "    freeze_tex = tf.imgui_checkbox(\"Freeze texture\", freeze_tex)\n",
-    "    normalize = tf.imgui_checkbox(\"Normalize\", normalize)\n",
+    "    tf.window.render_frame(render(model))\n",
+    "    tf.imgui.text(\"Frame time: %.3f ms\" % (1000.0 * smooth_delta_time))\n",
+    "    tf.imgui.text(\"FPS: %.1f\" % (1.0 / (smooth_delta_time + 1e-5)))\n",
+    "    do_optimization = tf.imgui.checkbox(\"Optimize\", do_optimization)\n",
+    "    tf.imgui.text(\"Loss: %.5f\" % loss_val)\n",
+    "    lr = tf.imgui.slider(\"Learning rate\", lr, 0.0, 0.1)\n",
+    "    iters_per_frame = tf.imgui.slider(\"Iterations per frame\", iters_per_frame, 1, 100)\n",
+    "    batch_size = tf.imgui.slider(\"Batch size\", batch_size, 64, 10000)\n",
+    "    freeze_weights = tf.imgui.checkbox(\"Freeze weights\", freeze_weights)\n",
+    "    freeze_tex = tf.imgui.checkbox(\"Freeze texture\", freeze_tex)\n",
+    "    normalize = tf.imgui.checkbox(\"Normalize\", normalize)\n",
     "    \n",
     "    prev_time = cur_time\n",
     "\n",
