--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -2,22 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
       "InvertMatrix:\n",
       "  Kernel count: 13\n",
       "  Intermediate buffers: 1\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 864\n",
-      "  IR Compile time: 12.467400 ms\n",
-      "  Steps time: 1902.861206 ms\n",
+      "  Lines of generated code: 514\n",
+      "  IR Compile time: 14.439300 ms\n",
+      "  Steps time: 1757.277222 ms\n",
       "\n"
      ]
     }
@@ -26,7 +25,7 @@
     "import numpy as np\n",
     "import TensorFrost as tf\n",
     "\n",
-    "tf.initialize(tf.cpu)\n",
+    "tf.initialize(tf.opengl)\n",
     "\n",
     "def modified_gram_schmidt(A):\n",
     "    A = A.astype(float)\n",
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -114,12 +113,12 @@
      "text": [
       "QR decomposition is correct: True\n",
       "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 2.273584105765514e-16\n",
-      "Error using TensorFrost: 1.5935119022229698e-07\n",
+      "Error: 1.6883057536160649e-16\n",
+      "Error using TensorFrost: 8.370362911983892e-08\n",
       "R inversion is correct: True\n",
-      "Error: 8.026777637875303e-07\n",
+      "Error: 1.2283234575028583e-06\n",
       "Full inversion is correct: True\n",
-      "Error: 2.0344069471974373e-06\n"
+      "Error: 1.5226425266861598e-05\n"
      ]
     }
    ],
