Update the rest of examples

--- a/examples/Rendering/fft2d.ipynb
+++ b/examples/Rendering/fft2d.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "FFT2:\n",
       "  Kernel count: 11\n",
       "  Intermediate buffers: 5\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 480\n",
-      "  IR Compile time: 36.155300 ms\n",
-      "  Compiler time: 1423.579102 ms\n",
+      "  Lines of generated code: 526\n",
+      "  IR Compile time: 58.149300 ms\n",
+      "  Steps time: 1899.609375 ms\n",
       "\n"
      ]
     }
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,23 +185,21 @@
     "\n",
     "signal_tf = tf.tensor(np.flip(image_resampled[:,:,0:3], axis=0))\n",
     "\n",
-    "tf.show_window(1024, 1024, \"2D FFT\")\n",
+    "tf.window.show(1024, 1024, \"2D FFT\")\n",
     "\n",
     "prev_time = time.time()\n",
     "freq = 2.0\n",
     "\n",
-    "while not tf.window_should_close():\n",
+    "while not tf.window.should_close():\n",
     "    cur_time = time.time()\n",
     "    dtime = cur_time - prev_time\n",
     "    params = tf.tensor(np.array([freq], dtype=np.float32))\n",
     "    output, recovered  = fft(signal_tf, params)\n",
-    "    tf.render_frame(recovered)\n",
-    "    tf.imgui_text(\"Render time: %.3f ms\" % (dtime * 1000))\n",
-    "    freq = tf.imgui_slider(\"Frequency\", freq, 0.1, 30.0)\n",
+    "    tf.window.render_frame(recovered)\n",
+    "    tf.imgui.text(\"Render time: %.3f ms\" % (dtime * 1000))\n",
+    "    freq = tf.imgui.slider(\"Frequency\", freq, 0.1, 30.0)\n",
     "\n",
-    "    prev_time = cur_time\n",
-    "\n",
-    "tf.hide_window()"
+    "    prev_time = cur_time"
    ]
   }
  ],
