--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "InvertMatrix:\n",
-      "  Kernel count: 13\n",
+      "  Kernel count: 14\n",
       "  Intermediate buffers: 1\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 514\n",
-      "  IR Compile time: 14.439300 ms\n",
-      "  Steps time: 1757.277222 ms\n",
+      "  Lines of generated code: 516\n",
+      "  IR Compile time: 7.392900 ms\n",
+      "  Host Compile time: 1624.092773 ms\n",
+      "  Shader Compile time: 1.586300 ms\n",
       "\n"
      ]
     }
@@ -67,8 +69,10 @@
     "\n",
     "    if not lower: #transpose the matrix to make it lower triangular\n",
     "        matrix = matrix.T\n",
+    "\n",
+    "    inverted[0, 0] = 1.0 / matrix[0, 0]\n",
     "    \n",
-    "    with tf.loop(n) as i:\n",
+    "    with tf.loop(1, n) as i:\n",
     "        inverted[i, i] = 1.0 / matrix[i, i]\n",
     "        p, k = tf.indices([i, i])\n",
     "        t, = tf.indices([i])\n",
@@ -93,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,12 +117,12 @@
      "text": [
       "QR decomposition is correct: True\n",
       "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 1.6883057536160649e-16\n",
-      "Error using TensorFrost: 8.370362911983892e-08\n",
+      "Error: 2.0328117071991353e-16\n",
+      "Error using TensorFrost: 1.6185606230763885e-07\n",
       "R inversion is correct: True\n",
-      "Error: 1.2283234575028583e-06\n",
-      "Full inversion is correct: True\n",
-      "Error: 1.5226425266861598e-05\n"
+      "Error: 6.439323561312488e-06\n",
+      "Full inversion is correct: False\n",
+      "Error: 3.378898980856315e-05\n"
      ]
     }
    ],
